--- a/contacts.html
+++ b/contacts.html
@@ -7,8 +7,8 @@
   <body>
     <a href="index.html">Back</a>
     <h2>Contact Details:</h2>
-    <p>Email: tobiasschuster@web.de</p>
-    <p>Mobile: +49 1575 29659200</p>
+    <p>Email: tobiasschuster@xxx.de</p>
+    <p>Mobile: +49 1575 296592xx</p>
     <hr>
     <form class="" action="mailto:tobiasdrachenherr@web.de" method="post" enctype="text/plain">
       <label>Your Name:</label>
